# apis-instance-sicprod-dev-test

./: .gitignore  pyproject.toml
.github/workflows/: deploy.yml
apis_ontology/: mixins.py  models.py  urls.py  views.py
apis_ontology/management/commands/: importproperties.py  labeltometadata.py
apis_ontology/migrations/: 0005_court_metadata_event_metadata_function_metadata_and_more.py  0005_event_eventtookplaceat_place_and_more.py  0005_personhaslivingplace.py  0006_personhaslivingplace_end_date_and_more.py  0007_event_eventtookplaceat_place_and_more.py  0008_alter_event_eventtookplaceat_place_end_date_and_more.py
apis_ontology/settings/: server_settings.py
apis_ontology/templates/: base.html  model_to_table.html
apis_ontology/templates/apis_entities/: edit_generic.html
apis_ontology/templates/apis_entities/detail_views/: detail_generic.html
apis_ontology/templates/reversion/: revision_list.html
apis_ontology/templates/webpage/: base.html
apis_ontology/templatetags/: apis_ontology.py
