[tool.poetry]
name = "apis-instance-sicprod-test"
version = "0.1.0"
description = "Generic APIS project for auto devops"
authors = ["Birger Schacht <birger.schacht@oeaw.ac.at>"]
license = "MIT"
packages = [{include = "apis_ontology"}]


[tool.poetry.dependencies]
python = ">=3.11,<3.12"
django = ">=4.1,<4.2"
whitenoise = "^5.2.0"
sentry-sdk = "*"
dj-database-url = "^0.5.0"
gunicorn = "^20.0.4"
django-allow-cidr = "^0.3.1"
mysqlclient = "^2.0.3"
django-extensions = "^3.1.3"
django-csp = "^3.7"
pyzotero = "^1.5.5"
apis-core = { git = "https://github.com/acdh-oeaw/apis-core-rdf.git", branch = "sicprod" }
webpage = { git = "https://github.com/acdh-oeaw/apis-webpage.git", branch = "main" }
apis-bibsonomy = { git = "https://github.com/acdh-oeaw/apis-bibsonomy.git", branch = "main" }
apis-highlighter = { git = "https://github.com/acdh-oeaw/apis_highlighter.git", branch = "main" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
